feat: more templating + construction projects page

--- a/content/about.html
+++ b/content/about.html
@@ -1,5 +1,9 @@
 +++
+title = "À propos"
+description = "Vous souhaitez en savoir plus sur nous et notre école ?"
 layout = "about"
+[menus.main]
+  weight = 10
 +++
 
 <div class="about_content about_eirbot">
