--- a/content/partners.html
+++ b/content/partners.html
@@ -1,3 +1,11 @@
++++
+title = "Partenaires"
+description = "Ils nous aident et nous font confiance."
+
+[menus.main]
+  weight = 40
++++
+
 <div class="subheader">
   <h3>NOS PARTENAIRES</h3>
   <p>Afin de participer à la coupe de
