--- a/content/contact.html
+++ b/content/contact.html
@@ -1,5 +1,9 @@
 +++
+title = "Contact"
+description = "Vous souhaitez discuter avec nous ?"
 layout = "contact"
+[menus.main]
+  weight = 50
 +++
 
 <h3>DEMANDE DE CONTACT</h3>
