--- a/content/contact.html
+++ b/content/contact.html
@@ -7,7 +7,7 @@ layout = "contact"
 +++
 
 <h3>DEMANDE DE CONTACT</h3>
-<form action="/scripts/mail.php" class="decor">
+<form action="/mail.php" class="decor">
     <div class="form-left-decoration"></div>
     <div class="form-right-decoration"></div>
     <div class="circle"></div>
