feat: alternate section + css fix
refactored home and partners pages in alternate partial template
fix padding issues and menu colors
also moved non-general and general assets
moved home layout in the theme home layout

--- a/content/contact.html
+++ b/content/contact.html
@@ -2,6 +2,7 @@
 title = "Contact"
 description = "Vous souhaitez discuter avec nous ?"
 layout = "contact"
+mainPicture = "images/mail.png"
 [menus.main]
   weight = 60
 +++
