--- a/content/contact.html
+++ b/content/contact.html
@@ -6,14 +6,19 @@ mainPicture = "images/mail.png"
 [menus.main]
   weight = 60
 +++
+{{< alterDiv title="Nos canaux communautaires" picture="/images/antenna.svg"
+href="https://assos.eirb.fr/Eirbot" dark="false" alt="antenna network logo" >}}
+Vous êtes étudiant(e) à l'ENSEIRB-MATMECA ? Alors n'hésitez pas à rejoindre nos
+canaux internes de communication, qui sont accessibles depuis ce site authentifié.
+{{< /alterDiv >}}
 
-<h3>DEMANDE DE CONTACT</h3>
+<h3>DEMANDE DE CONTACT EXTÉRIEUR</h3>
 <form action="/mail.php" class="decor">
     <div class="form-left-decoration"></div>
     <div class="form-right-decoration"></div>
     <div class="circle"></div>
     <div class="form-inner">
-        <h1>Vous souhaitez nous parler?</h1>
+        <h1>Vous souhaitez nous parler ?</h1>
         <input type="text" placeholder="Nom" name="name">
         <input type="email" placeholder="Email" name="email">
         <input type="text" placeholder="Sujet" name="subject">
@@ -21,3 +26,6 @@ mainPicture = "images/mail.png"
         <button type="submit">Envoyer</button>
     </div>
 </form>
+
+
+
